changed makefile to work for ex3_2-4

--- a/gpu01/Ex3/3_2-4/Makefile
+++ b/gpu01/Ex3/3_2-4/Makefile
@@ -1,6 +1,6 @@
 NVCC=nvcc
-INC=-I./inc -I/usr/local/cuda/include
-LIB=-L/usr/local/cuda/lib64
+INC=-I./inc #-I/usr/local/cuda/include
+#LIB=-L/usr/local/cuda/lib64
 
 .PHONY: build
 build: ./bin/memCpy
