hpc_ex22 [FEATURE]: update semi-final form

--- a/hpc01/Exercise_2/2_3/Makefile
+++ b/hpc01/Exercise_2/2_3/Makefile
@@ -1,7 +1,6 @@
 
 MPICC=mpicc
 
-
 .PHONY: build
 build: ./bin/measureBandwith
 
@@ -13,4 +12,4 @@ clean:
 rebuild: clean build
 
 ./bin/measureBandwith: ./main.c
-	$(MPICC) -lm -o $@ $^ $(INC) $(LIB)
+	$(MPICC) -Wall -lm -o $@ $^ $(INC) $(LIB)
