working version of ex3_2-4

--- a/gpu01/Ex3/3_2-4/Makefile
+++ b/gpu01/Ex3/3_2-4/Makefile
@@ -12,5 +12,5 @@ clean:
 .PHONY: rebuild
 rebuild: clean build
 
-./bin/memCpy: ./src/main.cpp ./src/kernel.cu
+./bin/memCpy: ./src/template.cpp ./src/kernel.cu
 	$(NVCC) -O2 -arch=sm_75 --compiler-options "-O2 -Wall -Wextra" -o $@ $^ $(INC) $(LIB)
