[FEATURE]: another solution of 3_2

--- a/gpu01/Ex3/3_2-4/Makefile
+++ b/gpu01/Ex3/3_2-4/Makefile
@@ -1,6 +1,6 @@
 NVCC=nvcc
-INC=-I./inc #-I/usr/local/cuda/include
-#LIB=-L/usr/local/cuda/lib64
+INC=-I./inc -I$(CUDA_PATH)/include
+LIB=-L$(CUDA_PATH)/lib64
 
 .PHONY: build
 build: ./bin/memCpy
@@ -8,9 +8,9 @@ build: ./bin/memCpy
 .PHONY: clean
 clean:
 	rm ./bin/*
-	
+
 .PHONY: rebuild
 rebuild: clean build
 
 ./bin/memCpy: ./src/main.cpp ./src/kernel.cu
-	$(NVCC) -O2 -arch=sm_75 --compiler-options "-O2 -Wall -Wextra" -o $@ $^ $(INC) $(LIB)
+	$(NVCC) -O2 -G -arch=sm_75 --compiler-options "-O2 -Wall -Wextra" -o $@ $^ $(INC) $(LIB)
