--- a/hpc01/Ex3/3_3-5/makefile
+++ b/hpc01/Ex3/3_3-5/makefile
@@ -12,4 +12,4 @@ clean:
 rebuild: clean build
 
 ./bin/matrixMultiplyP: ./main.c
-	$(MPICC) -lm -o $@ $^ $(INC) $(LIB)
+	$(MPICC) -g -lm -o $@ $^ $(INC) $(LIB)
