--- a/gpu01/Ex5/5_2/Makefile
+++ b/gpu01/Ex5/5_2/Makefile
@@ -2,7 +2,7 @@
 INC=-I./inc #-I. -I$(CUDA_ROOT)/include
 #LIB=-L$(CUDA_ROOT)/lib64
 #NVCC=$(CUDA_ROOT)/bin/nvcc
-NVCC_FLAGS=-O2 -arch=sm_75 --compiler-options "-O2 -Wall -Wextra"
+NVCC_FLAGS=-O2 -arch=sm_75 -Xptxas -flcm=cg -Xptxas -fscm=cg --compiler-options "-O2 -Wall -Wextra"
 
 .PHONY: build
 build: ./bin/matMul
