--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cuda-samples"]
 	path = cuda-samples
 	url = https://github.com/NVIDIA/cuda-samples
+[submodule "cudalibrarysamples"]
+	path = cudalibrarysamples
+	url = https://github.com/nvidia/cudalibrarysamples
