--- a/gpu01/Ex6/6_6/own_implementation/Makefile
+++ b/gpu01/Ex6/6_6/own_implementation/Makefile
@@ -1,5 +1,5 @@
 #CUDA_ROOT=/opt/cuda-7.0
-INC=-I./inc #-I. -I$(CUDA_ROOT)/include
+INC=-I./inc -I $(CUDA_PATH)/include
 #LIB=-L$(CUDA_ROOT)/lib64
 #NVCC=$(CUDA_ROOT)/bin/nvcc
 
@@ -13,5 +13,5 @@ clean:
 .PHONY: rebuild
 rebuild: clean build
 
-./bin/reduction: ./src/main.cpp ./src/kernel.cu
+./bin/reduction: ./src/main.cpp ./src/kernel.cu 
 	$(NVCC) -O2 -arch=compute_60 -code=sm_70 --compiler-options "-O2 -Wall -Wextra" -o $@ $^ $(INC) $(LIB)
