ex7_2 [FEATURE]: collect measurement results

--- a/hpc01/Ex7/7_2/Makefile
+++ b/hpc01/Ex7/7_2/Makefile
@@ -1,5 +1,5 @@
 
-MPICC=gcc
+MPICC=mpic++
 
 .PHONY: build
 build: ./bin/nBody
@@ -11,5 +11,5 @@ clean:
 .PHONY: rebuild
 rebuild: clean build
 
-./bin/nBody: ./main.c
-	$(MPICC) -Wall -O3 -lm -lncurses -o $@ $^ $(INC) $(LIB)
+./bin/nBody: ./src/main.cpp
+	$(MPICC) -Wall -O3 -lm -o $@ $^ $(INC) $(LIB)
